:bug: Fix abnormal scrollbar in Chrome
when rowSelection and title work together

close #16912

--- a/components/table/style/index.less
+++ b/components/table/style/index.less
@@ -271,8 +271,8 @@
 
   &-title + &-content {
     position: relative;
-    overflow: hidden;
     border-radius: @table-border-radius-base @table-border-radius-base 0 0;
+
     .@{table-prefix-cls}-bordered & {
       &,
       table,
